--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -29,7 +29,7 @@
     <div class="site-mobile-menu-body"></div>
   </div>
 
-  <header class="site-navbar py-4 bg-white js-sticky-header site-navbar-target" role="banner">
+  <header class="site-navbar py-4 bg-white js-sticky-header site-navbar-target" role="banner" id="home-section">
     <div class="container">
       <div class="row align-items-center">
 
@@ -46,7 +46,7 @@
               <li><a href="#values-section" class="nav-link">Values</a></li>
               <li><a href="#team-section" class="nav-link">Team</a></li>
               <li><a href="#services-section" class="nav-link">Services</a></li>
-              <li><a href="https://medium.com/earthvectors" target="_blank" class="nav-link">Blog</a></li>
+              <li><a href="https://medium.com/earthvectors" target="_blank">Blog</a></li>
               <li><a href="#contact-section" class="nav-link">Contact</a></li>
             </ul>
           </nav>
