--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="stylesheets/colors.css" />
   <link rel="stylesheet" href="stylesheets/slogan.css" />
   <link rel="stylesheet" href="stylesheets/nav.css" />
+  <link rel="stylesheet" href="stylesheets/footer.css" />
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
